@@ -1,20 +1,17 @@
 <?php
-/*************************
-  Coppermine Photo Gallery
-  ************************
-  Copyright (c) 2003-2016 Coppermine Dev Team
-  v1.0 originally written by Gregory Demar
+/**
+ * Coppermine Photo Gallery
+ *
+ * v1.0 originally written by Gregory Demar
+ *
+ * @copyright  Copyright (c) 2003-2021 Coppermine Dev Team
+ * @license    GNU General Public License version 3 or later; see LICENSE
+ *
+ * include/stats.inc.php
+ * @since  1.6.14
+ */
 
-  This program is free software; you can redistribute it and/or modify
-  it under the terms of the GNU General Public License version 3
-  as published by the Free Software Foundation.
-
-  ********************************************
-  Coppermine version: 1.6.03
-  $HeadURL$
-**********************************************/
-
-if (!defined('IN_COPPERMINE')) die('Not in Coppermine...');
+defined('IN_COPPERMINE') or die('Not in Coppermine...');
 
 /**
  * initialize the vars start
@@ -219,7 +216,8 @@ $osArray = array(
  */
 function individualStatsByOS($pid='',$type='hits', $tableWidth='100%') {
       global $osArray, $CONFIG, $lang_stat_details_php, $icon_array;
-       $maxBarWidth = 200;
+		$maxBarWidth = 200;
+		$osResultArray = [];
       if (GALLERY_ADMIN_MODE == true){
         foreach ($osArray as $key => $value) {
                 $query = "SELECT COUNT(*) FROM ";
@@ -290,6 +288,7 @@ EOT;
 function individualStatsByBrowser($pid='',$type='hits', $tableWidth='100%') {
       global $browserArray, $CONFIG, $lang_stat_details_php, $icon_array;
       $maxBarWidth = 200;
+      $browserResultArray = [];
       if (GALLERY_ADMIN_MODE == true){
         foreach ($browserArray as $key => $value) {
                 $query = "SELECT COUNT(*) FROM ";
